[metadata]
name = colcon-defaults
version = attr: colcon_defaults.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-defaults/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-defaults/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to read defaults from a config file.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.7.0
  PyYAML
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-defaults

[options.entry_points]
colcon_core.argument_parser =
    colcon = colcon_defaults.argument_parser.defaults:DefaultArgumentsArgumentParserDecorator
colcon_core.environment_variable =
    defaults = colcon_defaults.argument_parser.defaults:DEFAULTS_FILE_ENVIRONMENT_VARIABLE

[flake8]
import-order-style = google

[coverage:run]
source = colcon_defaults
